<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppAdmin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_act__ingredientes">Stock</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_1">Iniciar Sesión</string>
    <string name="invalid_email">El correo es inválido</string>
    <string name="invalid_password">La contraseña es muy corta</string>
    <string name="incorrect_password">La contraseña es inválida</string>
    <string name="field_required">Este campo es obligatorio</string>
    <string name="action_sign_in">INICIAR SESIÓN</string>
    <string name="registrarse_login">Registrarse</string>
    <string name="title_activity_act_principal">Principal</string>
    <string name="title_activity_act__login">Login</string>
    <string name="title_activity_act__signup">Registro</string>
    <string name="nombre_usuario"></string>
    <string name="nombre_usuario_hint">Nombres</string>
    <string name="apellido_usuario_hint">Apellidos</string>
    <string name="cedula_usuario_hint">Cédula</string>
    <string name="contrasena_signup"></string>
    <string name="contrasena_signup_hint">Contraseña</string>
    <string name="confirmar_contrasena_signup_hint">Confirme su contraseña</string>
    <string name="apellido_usuario"></string>
    <string name="acion_sign_up">REGISTRARSE</string>
    <string name="telefono_signup">Teléfono móvil</string>
    <string name="cedula_usuario"></string>
    <string name="et_nombreingr"></string>
    <string name="et_tipoingr"></string>
    <string name="hint_nombreingr">Nombre del Ingrediente</string>
    <string name="hint_tipoing">Tipo de Ingrediente</string>
    <string name="et_preciounit"></string>
    <string name="et_cantidad"></string>
    <string name="str_but_Agregar">Agregar</string>
    <string name="et_descripcioningr"></string>
    <string name="hint_precio_unitario">Precio Unitario</string>
    <string name="hint_cant_ing">Cantidad</string>
    <string name="but_ingredientes">STOCK</string>
    <string name="title_activity_plato__menu">Plato_Menu</string>
    <string name="title_activity_act__conf_menu">Act_ConfMenu</string>
    <string name="title_activity_act__nuevo_menu">Act_NuevoMenu</string>

</resources>